--- a/index.html
+++ b/index.html
@@ -92,9 +92,24 @@
                 <h3>9.7</h3>
             </div>
         </section>
+        <section class="form-container container">
+            <h1>Faça sua inscrição</h1>
+            <div class="div-form-container">
+                <form action="#">
+                    <input class="button-customize" type="text" name="Nome" size="auto" value="    Nome completo">
+                    <input class="button-customize" type="text" name="Email" size="auto" value="    Email">
+                    <p>Qual sua plataforma preferida?</p>
+                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="pc" checked> PC</div>
+                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="Xbox"> Xbox</div>
+                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="Playstation"> Playstation</div>
+                    <div class="checkbox-customize radio-customize"><input type="checkbox" name="receive-news" value="receive-news"> Desejo receber novidades.</div>
+                    <div><button type="submit" name="buttonsubmit" value="buttonsubmit">Enviar</button></div>
+                    <div class="button-reset"><button type="reset" name="buttonclean" value="buttonclean">Limpar</button></div>
 
-        <section>
 
+
+                </form>
+            </div>
         </section>
 
         <footer>
