--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div>
                 <h1>DSPlayGames</h1>
             </div>
-            <div><img src="img/profile.svg" alt="Profile"></div>
+            <div> <img src="img/profile.svg" alt="Profile"></div>
         </nav>
     </header>
     <main>
@@ -65,7 +65,7 @@
                 <a href="#" target="_blank">Ler mais...</a>
             </div>
             <div>
-                <button>Carregar mais</button>
+                <a href="#"><button type="button">Carregar mais</button></a>
             </div>
         </section>
         <section class="games-container container">
@@ -92,31 +92,40 @@
                 <h3>9.7</h3>
             </div>
         </section>
-        <section class="form-container container">
+        <section class="form-container">
             <h1>Faça sua inscrição</h1>
             <div class="div-form-container">
                 <form action="#">
-                    <input class="button-customize" type="text" name="Nome" size="auto" value="    Nome completo">
-                    <input class="button-customize" type="text" name="Email" size="auto" value="    Email">
+                    <input class="button-customize" type="text" name="Nome" size="auto" placeholder="Nome completo">
+                    <input class="button-customize" type="text" name="Email" size="auto" placeholder="Email">
                     <p>Qual sua plataforma preferida?</p>
-                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="pc" checked> PC</div>
+                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="pc" checked> PC
+                    </div>
                     <div class="radio-customize"><input type="radio" name="preferred-platform" value="Xbox"> Xbox</div>
-                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="Playstation"> Playstation</div>
-                    <div class="checkbox-customize radio-customize"><input type="checkbox" name="receive-news" value="receive-news"> Desejo receber novidades.</div>
+                    <div class="radio-customize"><input type="radio" name="preferred-platform" value="Playstation">
+                        Playstation</div>
+                    <div class="checkbox-customize radio-customize"><input type="checkbox" name="receive-news"
+                            value="receive-news"> Desejo receber novidades.</div>
                     <div><button type="submit" name="buttonsubmit" value="buttonsubmit">Enviar</button></div>
-                    <div class="button-reset"><button type="reset" name="buttonclean" value="buttonclean">Limpar</button></div>
-
-
-
+                    <div class="button-reset"><button type="reset" name="buttonclean"
+                            value="buttonclean">Limpar</button></div>
                 </form>
             </div>
         </section>
-
-        <footer>
-
-
-        </footer>
     </main>
+    <footer class="container">
+        <div><a href="mailto">@dsplaygames</a><br>
+            <a href="#">/dsplaygames</a>
+        </div>
+        <div>
+            <p>DS Play Games Ltda. Todos direitos</br>
+                reservados</p>
+        </div>
+        <div><a href="#">Política de privacidade</a><br>
+            <a href="#">Termos de uso</a>
+        </div>
+    </footer>
+
 
 </body>
 
