--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
             <div>
                 <h1>DSPlayGames</h1>
             </div>
-            <div> <img src="img/profile.svg" alt="Profile"></div>
+            <div class="menu-header">
+                <a href="#news">Notícias</a>
+                <a href="#games">Jogos</a>
+                <a href="#form">Inscreva-se</a>
+                <img src="img/profile.svg" alt="Profile">
+            </div>
         </nav>
     </header>
     <main>
-        <section class="news-container container">
+        <section id="news" class="news-container container">
             <div class="lastest-news">
                 <h2>Últimas notícias</h2>
             </div>
@@ -68,31 +73,33 @@
                 <a href="#"><button type="button">Carregar mais</button></a>
             </div>
         </section>
-        <section class="games-container container">
+        <section id="games" class="section-games container">
             <h1>Jogos</h1>
-            <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
-                <h2>Horizon Forbidden West</h2>
-                <p><b>
-                        <font color="#38af90" size="+1">De</font>
-                    </b> Sony Interactive Entertainment</p>
-                <h3>9.7</h3>
-            </div>
-            <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
-                <h2>Horizon Forbidden West</h2>
-                <p><b>
-                        <font color="#38af90" size="+1">De</font>
-                    </b> Sony Interactive Entertainment</p>
-                <h3>9.7</h3>
-            </div>
-            <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
-                <h2>Horizon Forbidden West</h2>
-                <p><b>
-                        <font color="#38af90" size="+1">De</font>
-                    </b> Sony Interactive Entertainment</p>
-                <h3>9.7</h3>
+            <div class="game-container">
+                <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
+                    <h2>Horizon Forbidden West</h2>
+                    <p><b>
+                            <font color="#38af90" size="+1">De</font>
+                        </b> Sony Interactive Entertainment</p>
+                    <h3>9.7</h3>
+                </div>
+                <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
+                    <h2>Horizon Forbidden West</h2>
+                    <p><b>
+                            <font color="#38af90" size="+1">De</font>
+                        </b> Sony Interactive Entertainment</p>
+                    <h3>9.7</h3>
+                </div>
+                <div class="card-game"><img src="img/image-game.png" alt="Horizon Forbidden West">
+                    <h2>Horizon Forbidden West</h2>
+                    <p><b>
+                            <font color="#38af90" size="+1">De</font>
+                        </b> Sony Interactive Entertainment</p>
+                    <h3>9.7</h3>
+                </div>
             </div>
         </section>
-        <section class="form-container">
+        <section id="form" class="form-container">
             <h1>Faça sua inscrição</h1>
             <div class="div-form-container">
                 <form action="#">
@@ -105,10 +112,16 @@
                     <div class="radio-customize"><input type="radio" name="preferred-platform" value="Playstation">
                         Playstation</div>
                     <div class="checkbox-customize radio-customize"><input type="checkbox" name="receive-news"
-                            value="receive-news"> Desejo receber novidades.</div>
-                    <div><button type="submit" name="buttonsubmit" value="buttonsubmit">Enviar</button></div>
-                    <div class="button-reset"><button type="reset" name="buttonclean"
-                            value="buttonclean">Limpar</button></div>
+                            value="receive-news"> Desejo receber novidades.
+                    </div>
+                    <div class="button-row">
+                        <div><button type="submit" name="buttonsubmit"
+                                value="buttonsubmit">Enviar</button>
+                        </div>
+                        <div class="button-reset"><button type="reset" name="buttonclean"
+                                value="buttonclean">Limpar</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </section>
